<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/border"
    >


    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-61dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:background="@drawable/eat"
            tools:layout_editor_absoluteX="-3dp"
            tools:layout_editor_absoluteY="21dp" />

        <View
            android:id="@+id/imageEat"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" />


        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Welcome to the food panel!"
            android:textAllCaps="true"
            android:textColor="@color/litePink"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageEat"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhite"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/textWelcome"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="18dp" />

        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            tools:layout_editor_absoluteX="27dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="180dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/inputEmail"
            app:layout_constraintEnd_toEndOf="@+id/inputEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputEmail"
            app:layout_constraintTop_toTopOf="@+id/inputEmail"
            app:layout_constraintVertical_bias="1.0"
            app:tint="@color/colorTextHint" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForEmail"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="14dp" />

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            tools:layout_editor_absoluteX="17dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lock_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForEmail"
            app:layout_constraintVertical_bias="0.772"
            app:tint="@color/colorTextHint" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/litePink"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForPassword"
            tools:ignore="UnknownId"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/purple"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount"
            tools:layout_editor_absoluteX="30dp" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/litePink"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.116"
            tools:layout_editor_absoluteX="30dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>